deployments/istio/game-data-proxy-destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "game-data-proxy"
spec:
  host: "game-data-proxy"
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
