deployments/istio/game-data-proxy-virtual-service-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "game-data-proxy-route-default"
spec:
  hosts:
  - "game-data-proxy"
  gateways:
  - "wc-gateway"
  http:
  - route:
    - destination:
        host: "game-data-proxy"
        subset: v1
