deployments/istio/game-data-virtual-service-100-0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: game-data-100-0
spec:
  hosts:
    - game-data
  http:
  - route:
    - destination:
        host: game-data
        subset: v1
      weight: 100
    - destination:
        host: game-data
        subset: v2
      weight: 0
