deployments/istio/game-data-virtual-service-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "game-data-route-default"
  namespace: development
spec:
  hosts:
  - "game-data"
  http:
  - route:
    - destination:
        host: "game-data"
        subset: v1
      weight: 50
    - destination:
        host: "game-data"
        subset: v2
      weight: 50
