deployments/istio/game-data-virtual-service-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: game-data
spec:
  hosts:
    - game-data
  http:
  - route:
    - destination:
        host: game-data
        subset: v1
      weight: 80
    - destination:
        host: rgame-data
        subset: v2
      weight: 20
