deployments/istio/game-data-virtual-service-delay-10s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: game-data-delay-10s
spec:
  hosts:
  - game-data
  http:
  - route:
    - destination:
        host: game-data
        subset: v1
    fault:
      delay:
        percent: 100
        fixedDelay: 10s
