deployments/istio/game-data-virtual-service-err-500.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: game-data-err-500
spec:
  hosts:
  - game-data
  http:
  - route:
    - destination:
        host: game-data
        subset: v1
    fault:
      abort:
        percent: 100
        httpStatus: 500
