deployments/istio/game-data-virtual-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "game-data-route-v2"
  namespace: development
spec:
  hosts:
  - "game-data"
  gateways:
  - "wc-gateway"
  http:
  - route:
    - destination:
        host: "game-data"
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "game-data"
  namespace: development
spec:
  host: "game-data"
  subsets:
  - name: v2
    labels:
      version: v2
