deployments/istio/game-data-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "game-data-route-default"
  namespace: development
spec:
  hosts:
  - "game-data"
  http:
  - route:
    - destination:
      host: "game-data"
      subset: v1
